fix: Removed letter spacing

--- a/src/components/background/Background.module.scss
+++ b/src/components/background/Background.module.scss
@@ -20,7 +20,7 @@
 	body[data-theme='teacher'] &,
 	body[data-theme='developer'] & {
 		color: transparent;
-		letter-spacing: 8px;
+		// letter-spacing: 8px;
 		-webkit-text-stroke: 2px var(--color-primary-transparent);
 	}
 
